# cursor-docs-crawler

./: .flake8  .gitignore  CLAUDE.md  README.ko.md  README.md  design.md  main.py  pyproject.toml  requirements.md  requirements.txt  setup_test.py  tasks.md
.github/: llms-txt-snapshot.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: actionlint.yml  detect-docs-change.yml  e2e-test.yml  lint.yml  release-pdf.yml  test-seleniumbase.yml
scripts/: save_fixtures.py  test_seleniumbase_uc.py
src/: __init__.py  config.py  constants.py  content_parser.py  error_handler.py  fixture_crawler.py  logger.py  models.py  page_filter.py  page_sorter.py  pdf_generator.py  seed.py  selenium_crawler.py  url_manager.py
tests/: test_cli_config.py  test_content_parser.py  test_e2e_offline.py  test_main.py  test_pdf_generator.py  test_scope.py  test_selenium_crawler_inline_images.py  test_url_manager.py
tests/fixtures/: manifest.json
tests/fixtures/html/: docs.html  docs__account__pricing.html  docs__account__teams__pricing.html  docs__agent__overview.html  docs__agent__security.html  docs__api.html  docs__cli__overview.html  docs__configuration__extensions.html  docs__context__rules.html  docs__enterprise.html  docs__get-started__concepts.html  docs__models-and-pricing.html  docs__models.html  docs__rules.html  docs__tab__overview.html
