[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cursor-docs-crawler"
version = "1.6.0"
description = "A Python web crawler that scrapes the Cursor documentation site and generates a single PDF via WeasyPrint."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Woojin Ahn" },
]
keywords = ["cursor", "documentation", "crawler", "pdf", "weasyprint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Retrieval",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "weasyprint>=60.0",
    "Pillow>=10.0.0",
    "urllib3>=2.0.0",
    "selenium>=4.0.0,<5.0.0",
    "webdriver-manager>=4.0.0,<5.0.0",
    "psutil>=5.9.0",
    "tqdm>=4.66.0",
    "colorlog>=6.7.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/WoojinAhn/cursor-docs-crawler"
Repository = "https://github.com/WoojinAhn/cursor-docs-crawler"
Issues = "https://github.com/WoojinAhn/cursor-docs-crawler/issues"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]
